@@ -11,17 +11,12 @@ python:
   - "3.7-dev"
   - "nightly"
   - "pypy"
-env:
-  - IPYTHON_VERSION=">1.0,<2.0"
-  - IPYTHON_VERSION=">2.0"
+before_install:
+  # Update pip and setuptools to the latest.
+  - pip install --upgrade pip setuptools
 install:
-  - pip install ipython$IPYTHON_VERSION
+  # Install ipdb, which will install the right IPython version for the current python.
+  - pip install -e .
 script: 
   - python setup.py test
-matrix:
-  exclude:
-    - python: "2.6"
-      env: IPYTHON_VERSION=">2.0"
-    - python: "3.2"
-      env: IPYTHON_VERSION=">2.0"
 sudo: false
