@@ -49,7 +49,9 @@ setup(name='ipdb',
           'setuptools'
       ],
       extras_require={
-          ':python_version < "3.3"': ['ipython >= 0.10.2, < 6.0.0'],
+          ':python_version == "2.6"': ['ipython >= 0.10.2, < 2.0.0'],
+          ':python_version == "2.7"': ['ipython >= 0.10.2, < 6.0.0'],
+          ':python_version >= "3.0" and python_version < "3.3"': ['ipython >= 0.10.2, < 2.0.0'],
           ':python_version >= "3.3"': ['ipython >= 0.10.2'],
       },
       entry_points={
