@@ -4,7 +4,8 @@ Changelog
 0.10.3 (unreleased)
 -------------------
 
-- For users using python < 3.3, do not install IPython >= 6.0.0.
+- For users using python 2.6 or 3.0 to 3.2, do not install IPython >= 2.0.0.
+  And for users using python 2.7, do not install IPython >= 6.0.0.
   [vphilippon]
 - Command line usage consistent with pdb - Add argument commands
   [zvodd]
